Listo v1 para presentar al tutor

--- a/report/apendices/apendiceA.tex
+++ b/report/apendices/apendiceA.tex
@@ -4,6 +4,9 @@
 \label{apendiceA}
 \lhead{Apéndice A. \emph{Problemas NP y PH modelados en lógica}}
 
+*** FALTA UNA DESCRIPCIÓN EN TEXTO DE LA INTUICIÓN DETRÁS DE LA MODELACIÓN DE
+CADA DOMINIO, Y EJEMPLOS DE IMÁGENES CON GRAFOS ***
+
 \section{Problemas NP}
 
 \subsection{SAT, Satisfacibilidad proposicional}
