--- a/report/capitulos/capitulo3.tex
+++ b/report/capitulos/capitulo3.tex
@@ -46,7 +46,7 @@ solucionables en tiempo polinomial no determinístico.
 Esto se debe a que los problemas de esta clase sólo admiten planes
 de longitud exponencial en el peor caso ya que PH contiene, además de a NP, las
 clases coNP y $\Sigma^p_k$ para todo $k\geq 1$. La clase $\Sigma_p^2$, por
-ejemplo, es igual a $P^{NP}$, la clase de problemas resoluble en tiempo
+ejemplo, es igual a $P^{NP}$, la clase de problemas resolubles en tiempo
 polinomial contando un oráculo para resolver problemas NP.
 
 Una característica de NP es la 
